# persons_cpp

./: .gitignore  .rsync-filter  CMakeLists.txt  README.md  version.hpp.in
BD/: postgres_all.sql  units.sql  units_01_11_2025.sql  units_09_10_25.sql
headers/: cli_options.hpp  db_connection.hpp  for_sql.hpp  from_boost.hpp  list_persons.hpp  many_data.hpp  member.hpp  menu_orders.hpp  menu_persons.hpp  one_data.hpp  person.hpp  printtuple.hpp  unit.hpp  version.hpp
include/: version.hpp
libmenu/: CMakeLists.txt  Makefile  cmake_install.cmake  version.hpp.in
libmenu/include/: item.hpp  libmenu.hpp  menu.hpp  pager.hpp  term.hpp  version.hpp
libmenu/src/: item.cpp  menu.cpp  pager.cpp  term.cpp
src/: cli_options.cpp  db_connection.cpp  for_sql.cpp  from_boost.cpp  list_persons.cpp  main.cpp  many_data.cpp  member.cpp  menu_orders.cpp  menu_persons.cpp  one_data.cpp  person.cpp  test.c++  unit.cpp
